Add example how to protect an endpoint with token req
